--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
     margin: 0 auto;
 }
 
+.game-result{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    margin: 0 auto;
+}
+
 .game-link {
     padding-left: 20%;
 }
@@ -37,7 +44,7 @@ input {
     font-size: 16px;
 }
 
-.game-container {
+#game-container {
     width: 50%;
     margin: 0 auto;
 }
